# cg

./: .gitignore  CMakeLists.txt  README.md  basic_rt3
CG/: a.out
Project00/: backgroundcolor.cpp  backgroundcolor.h  main.cpp  out.ppm
Project01/: .gitignore  simple_bkg  simple_bkg.ppm
Project01/scene/: scene_04.xml
Project01/src/core/: api.cpp  api.h  background.cpp  background.h  film.cpp  film.h  paramset.h  parser.cpp  parser.h  rt3.h
scene/: scene_00.xml  scene_05.xml  scene_06.xml  scene_09.xml  scene_10.xml  scene_11.xml  scene_12.xml  scene_flat.xml
scene/proj_05_blinn_phong/: geometry_ambient.xml  geometry_directional.xml  geometry_light_combination.xml  geometry_spot.xml  materials.xml  point.xml  scene_main.xml  spheres.xml
scene/proj_06_triangle/: geometry.xml  spheres.xml  three_sphere.xml
scene/proj_06_triangle/teapot_scene/: teapot_geometry.xml  teapot_low_geometry.xml  teapot_low_scene.xml  teapot_scene.xml
scene/specular_mirror_scene/: main_strip_of_spheres.xml  strip_materials.xml  strip_objects.xml  strip_scene_2_geometry.xml
src/backgrounds/: background.cpp  background.h
src/cameras/: camera.cpp  camera.h  film.cpp  film.h
src/core/: api.cpp  api.h  background.h  camera.cpp  camera.h  film.cpp  film.h  integrator.cpp  integrator.h  material.cpp  material.h  parser.cpp  parser.h  primitive.cpp  primitive.h  primlist.cpp  primlist.h  ray.cpp  ray.h  rt3-base.h  rt3.h  scene.h  shape.h  sphere.cpp  sphere.h  surfel.h  transform.cpp  transform.h
src/integrators/: blinn_phong_integrator.cpp  blinn_phong_integrator.h  integrator.cpp  integrator.h  integrators.h
src/lights/: ambient_light.cpp  ambient_light.h  directional_light.cpp  directional_light.h  light.cpp  light.h  lights.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
src/main/: rt3.cpp
src/materials/: material.cpp  material.h
src/primitives/: BVHAccel.cpp  BVHAccel.h  bounds.cpp  bounds.h  primitive.cpp  primitive.h  primlist.cpp  primlist.h
src/shapes/: plane.cpp  plane.h  shape.cpp  shape.h  simple_triangle.cpp  simple_triangle.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
